<resources>
    <string name="app_name">MILK18Trucks</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_out">Sign out</string>

    <string name="wait_sign_in">Signing in...</string>
    <string name="wait_sign_up">Signing up...</string>

    <string name="error_sign_in">Fail to sign in</string>
    <string name="error_sign_up">Fail to sign up</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>

    <!-- Strings related to GPS tracker -->
    <string name="gps_disabled_title">GPS disabled</string>
    <string name="gps_disabled_ask_settings">Do you want to go to settings menu?</string>
    <string name="gps_disabled_positive_response">Settings</string>
    <string name="gps_disabled_negative_response">Cancel</string>
    <string name="gps_required">You need to enable GPS to work properly</string>

    <!-- Strings related to Main activity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_import">Import</string>
    <string name="navigation_drawer_gallery">Gallery</string>
    <string name="navigation_drawer_slideshow">Slideshow</string>
    <string name="navigation_drawer_tools">Tools</string>
    <string name="navigation_drawer_communicate">Communicate</string>
    <string name="navigation_drawer_share">Share</string>
    <string name="navigation_drawer_send">Send</string>
    <string name="navigation_drawer_about">About</string>
    <string name="navigation_drawer_settings">Settings</string>

    <string name="navigation_header_email">Your email:</string>
</resources>
