<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_drawer_import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_drawer_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_drawer_slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_tools" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_information_outline"
            android:title="@string/navigation_drawer_about" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_action_exit"
            android:title="@string/action_sign_out" />
    </group>

    <item android:title="@string/navigation_drawer_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navigation_drawer_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navigation_drawer_send" />
        </menu>
    </item>

</menu>
